[gd_scene load_steps=2 format=3 uid="uid://chulhxxmhjt7k"]

[ext_resource type="Script" path="res://scripts/gui/multiplayer/host_menu.gd" id="1_wrp33"]

[node name="HostMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_wrp33")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -68.0
offset_right = 57.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomeInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Nome"
max_length = 10

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "8083"
placeholder_text = "Porta"
max_length = 4

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Criar Servidor"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
